<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rap.sheet.utilitys.CustomTextViewMedium
        android:id="@+id/textViewCamera"
        android:text="@string/camera"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:padding="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.rap.sheet.utilitys.CustomTextViewMedium
        android:id="@+id/textViewGallery"
        android:text="@string/gallery"
        android:gravity="center"
        android:textSize="@dimen/_14sdp"
        android:padding="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.rap.sheet.utilitys.CustomTextViewMedium
        android:id="@+id/textViewCancel"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/_14sdp"
        android:padding="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>