<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.rap.sheet.utilitys.CustomTextViewMedium
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/report"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:theme="@style/EditTextHint"
        app:errorTextAppearance="@style/error_appearance"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/hint_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.rap.sheet.utilitys.CustomEditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textAutoCorrect"
            android:paddingBottom="@dimen/_18sdp"
            android:textColor="@color/colorGrayDark"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:theme="@style/EditTextHint"
        app:errorTextAppearance="@style/error_appearance"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/hint_appearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.rap.sheet.utilitys.CustomEditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/comment"
            android:importantForAutofill="noExcludeDescendants"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:paddingBottom="@dimen/_18sdp"
            android:textColor="@color/colorGrayDark"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:background="@drawable/button_white_bg"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:layout_marginStart="@dimen/_16sdp"
        app:cornerRadius="@dimen/_18sdp"
        android:backgroundTint="@color/btnColorGray"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        style="@style/ButtonStyle"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/_18sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>