<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".view.feedback.FeedbackActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/top_view_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhoneNumber"
            style="@style/My.TextInputLayout.FilledBox.Dense"
            android:layout_marginTop="@dimen/_30sdp"
            app:errorTextAppearance="@style/error_appearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.rap.sheet.utilitys.CustomEditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/phone_number"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="phone"
                android:maxLength="16"
                android:textColor="@color/colorBlack"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/lvBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_26sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPhoneNumber">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/btnColorGray"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                app:cornerRadius="@dimen/_18sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAdd"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/remove"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:cornerRadius="@dimen/_18sdp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>