<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.search_number.SearchNumberActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <com.rap.sheet.utilitys.CustomTextViewMedium
                android:id="@+id/textViewClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:text="@string/clear"
                android:textColor="@color/navigationSelectedItem"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.rap.sheet.utilitys.CustomTextViewMedium
                android:id="@+id/textViewCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/navigationSelectedItem"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.rap.sheet.utilitys.CustomEditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.10"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:background="@null"
                android:cursorVisible="true"
                android:gravity="center"
                android:hint="@string/enter_a_number"
                android:inputType="number"
                android:maxLength="16"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrayLight"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCancel"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:backgroundTint="@color/colorAccent"
                android:gravity="center"
                android:paddingStart="@dimen/_32sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingEnd="@dimen/_32sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/search_no"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:cornerRadius="@dimen/_18sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
                tools:targetApi="lollipop" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <com.konaire.numerickeyboard.NumericKeyboard
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:field="@+id/editTextNumber"
                app:fieldMaxLength="10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>